--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="google-site-verification" content="FNDLUom7AZNPsNPixFOBAoV-RyJnrqwBcknZjncmmTY" />
+  <meta name="description" content="تطبيق الاسترخاء الذكي لجودة حياة أفضل">
+  <meta name="keywords" content="إسترخاء، راحه، تأمل، طاقه ">
     <title>نُوّار - Nowar</title>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
